--- a/Ted-140-Project-Notebook.ipynb
+++ b/Ted-140-Project-Notebook.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "ff0823a0",
+   "id": "e6c36cff",
    "metadata": {},
    "source": [
     "# Intro\n",
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "69b20969",
+   "id": "f8364c9a",
    "metadata": {},
    "source": [
     "# Data Exploration\n"
@@ -26,14 +26,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "id": "913d75fd",
+   "execution_count": 1,
+   "id": "90ac544f",
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
     "import requests\n",
     "from bs4 import BeautifulSoup\n",
+    "import matplotlib.pyplot as plt\n",
     "\n",
     "def get_dataset_df(dataset_name):\n",
     "    dataset_name = dataset_name.lower()\n",
@@ -54,8 +55,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "id": "3a3d1195",
+   "execution_count": 2,
+   "id": "c4a7b83d",
    "metadata": {},
    "outputs": [
     {
@@ -115,8 +116,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "id": "68af00c9",
+   "execution_count": 3,
+   "id": "05931ce3",
    "metadata": {},
    "outputs": [
     {
@@ -455,7 +456,7 @@
        "[8 rows x 25 columns]"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -466,8 +467,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
-   "id": "121e8e9e",
+   "execution_count": 4,
+   "id": "80545763",
    "metadata": {},
    "outputs": [
     {
@@ -491,8 +492,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
-   "id": "7bbd5ee5",
+   "execution_count": 5,
+   "id": "b4041377",
    "metadata": {},
    "outputs": [
     {
@@ -520,8 +521,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
-   "id": "fc8455ce",
+   "execution_count": 6,
+   "id": "881f1a5f",
    "metadata": {},
    "outputs": [
     {
@@ -546,8 +547,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
-   "id": "5cd23c79",
+   "execution_count": 7,
+   "id": "d41411f4",
    "metadata": {},
    "outputs": [
     {
@@ -577,7 +578,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "116921a0",
+   "id": "2b145ab6",
    "metadata": {},
    "source": [
     "# Analysis\n"
@@ -585,8 +586,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
-   "id": "b0a03073",
+   "execution_count": 8,
+   "id": "3e7bdd60",
    "metadata": {},
    "outputs": [
     {
@@ -610,7 +611,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "480c9d94",
+   "id": "5a35fb50",
    "metadata": {},
    "source": [
     "From the chart above, we can see that there is slight correlation between critic review score and average time to complete the game."
@@ -618,8 +619,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
-   "id": "2e9b2b2a",
+   "execution_count": 9,
+   "id": "fc2535cc",
    "metadata": {},
    "outputs": [
     {
@@ -645,7 +646,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a0260763",
+   "id": "9a12f652",
    "metadata": {},
    "source": [
     "This chart shows that there is no strong correlation between game sales and average playtime. This may indicate that simply having a longer game does not equate to a stronger game (quantity not necessarily better than quality)."
@@ -653,8 +654,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
-   "id": "e9b0736b",
+   "execution_count": 10,
+   "id": "947e4ea2",
    "metadata": {},
    "outputs": [
     {
@@ -682,7 +683,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2cba5fee",
+   "id": "623d43d0",
    "metadata": {},
    "source": [
     "While the chart may indicate a large dip in sales around 2007, by examining the y-axis we can see that there has not been a huge shift in sales numbers over the years."
@@ -690,8 +691,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
-   "id": "b068e54a",
+   "execution_count": 11,
+   "id": "c707529f",
    "metadata": {},
    "outputs": [
     {
@@ -718,7 +719,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cd8a146c",
+   "id": "90326663",
    "metadata": {},
    "source": [
     "This chart shows, using the mean sales on each console platform, that to some extent, the console that the game runs on contributes to how many sales that game gets. This chart makes sense since the Nintendo Wii was extremely popular and thus games on it tended to sell more copies because more people had access to the hardware."
@@ -727,7 +728,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fe05e9cd",
+   "id": "d00849e3",
    "metadata": {},
    "outputs": [],
    "source": []
