Small format change for YAML compatibility for blog

--- a/Ted-140-Project-Notebook.ipynb
+++ b/Ted-140-Project-Notebook.ipynb
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "74ff385f",
+   "id": "9599023a",
    "metadata": {},
    "source": [
     "# Methods\n",
@@ -606,7 +606,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "17c9e027",
+   "id": "9b2d8a34",
    "metadata": {},
    "source": [
     "From my exploratory data analysis, there does not seem to be any further cleaning, merging, or further processing of the data since my selected dataset has been already tailored and organized."
@@ -763,10 +763,9 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b3ca53e5",
+   "id": "5188a803",
    "metadata": {},
    "source": [
-    "---\n",
     "# Discussion\n",
     "\n",
     "My analysis reveals several correlations that may be useful for video game developers or businesses to keep in mind when planning a future release.\n",
@@ -777,10 +776,7 @@
     "\n",
     "Another area to consider is which platform to release a game onto. From my analysis, there are financial benefits to releasing your game onto a popular platform, such as the Wii while it was at its peak popularity. However, there are additional factors to consider. Developing for certain platforms may introduce additional costs or limitations such as using specific developer kits or programming languages, following company guidelines or restrictions such as Nintendo policies when developing for the Wii, or technical bugs related to porting from other platforms <sup id=\"a2\">[2](#f2)</sup>. This can introduce overhead or additional time needed to release a title, especially if developing on multiple distinct platforms. A decision needs to be made near the beginning of development to choose which platforms will be supported for the final product.\n",
     "\n",
-    "While my project has explored a selection of video game metrics, there are many other options available in assessing a game's performance and its characteristics for use in predicting the performance of future games. In an article from Knowledge at Wharton, the staff talks about Wharton students using data analysis techniques to predict the viability of various games published by EA.<sup id=\"a3\">[3](#f3)</sup> In recommending new games to EA play subscribers, a group of Wharton students decided on the following factors: \"Popularity: wanting to play “the hottest game on the street”; Social: wanting to play games that one’s friends and social circles play; Content: wanting to play games of a similar genre to those you played before; and Favorability: wanting to play games that have received good ratings and reviews.\" What we can gather from all of the analysis is that it is far from simply creating a fun game that leads to the success of that game.\n",
-    "\n",
-    "\n",
-    "\n",
+    "While my project has explored a selection of video game metrics, there are many other options available in assessing a game's performance and its characteristics for use in predicting the performance of future games. In an article from Knowledge at Wharton, the staff talks about Wharton students using data analysis techniques to predict the viability of various games published by EA.<sup id=\"a3\">[3](#f3)</sup> In recommending new games to EA play subscribers, a group of Wharton students decided on the following factors: \"Popularity: wanting to play \"the hottest game on the street\"; Social: wanting to play games that one’s friends and social circles play; Content: wanting to play games of a similar genre to those you played before; and Favorability: wanting to play games that have received good ratings and reviews.\" What we can gather from all of the analysis is that it is far from simply creating a fun game that leads to the success of that game.\n",
     "\n",
     "\n",
     "<span id=\"f1\">[1]</span> Ars Technica. (2014, April 15). Steam Gauge: Do strong reviews lead to stronger sales on Steam? Retrieved from https://arstechnica.com/gaming/2014/04/steam-gauge-do-strong-reviews-lead-to-stronger-sales-on-steam/#:~:text=In%20comparing%20estimates%20of%20sales%20on%20Steam%20to,at%20the%20top%20end%20of%20the%20critical%20spectrum.\n",
@@ -793,7 +789,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "30531052",
+   "id": "4e662e31",
    "metadata": {},
    "outputs": [],
    "source": []
